manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
name: dumbkv
spec:
selector:
app: dumbkv
ports:
- protocol: TCP
port: 80
targetPort: 8000
