manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
name: dumbkv-ingress
annotations:
cert-manager.io/cluster-issuer: letsencrypt
spec:
rules:
- host: dumbkv.example.com
http:
paths:
- path: /
pathType: Prefix
backend:
service:
name: dumbkv
port:
number: 80
tls:
- hosts:
- dumbkv.example.com
secretName: dumbkv-tls
